# cpp_project_framework

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  Jenkinsfile  Makefile  README.md  _config.yml  conanfile.py  conanfile.txt  cpp_project_framework.cmake  cpp_project_framework_callables.cmake  create_blank_project.py  create_new_project.py  index.md  make.bat  setup.cfg
_layouts/: default.html
cpp_project_framework/: CMakeLists.txt  __init__.py  cpp_project_framework.cpp  cpp_project_framework.h  cpp_project_framework.test.cpp  create_new_project.py  filesystem.h  gtest.h  shared_mutex.h
recipes/ftapi/: conandata.yml  conanfile.py
recipes/ftapi/test_package/: conanfile.py  example.cpp
recipes/g3log/: conandata.yml  conanfile.py  conanmanifest.txt
recipes/libmysqlclient/: conandata.yml  conanfile.py  conanmanifest.txt
recipes/libmysqlclient/patches/: 0005-support-msvc-version-1900.patch  0006-remove-initializers.patch
recipes/restinio/: conandata.yml  conanfile.py  conanmanifest.txt
recipes/restinio/patches/: 0001-fix-msvc-constexpr.patch  0002-fix-win32-define-for-asio.patch  0003-add-http-patch-method.patch
recipes/rocksdb/: conandata.yml  conanfile.py  conanmanifest.txt
recipes/spapi/: conandata.yml  conanfile.py
recipes/spapi/test_package/: conanfile.py  example.cpp
recipes/ta-lib/: conandata.yml  conanfile.py
recipes/ta-lib/test_package/: example.cpp
template/: CMakeLists.txt  Doxyfile  README.md  conanfile.py  conanfile.txt
template/template/: CMakeLists.txt  Template.cpp  Template.h  Template.hpp  Template.test.cpp  main.cpp
template/tests/benchmarks/template/: Template.benchmark.cpp
template/vscode/: c_cpp_properties.json  settings.json
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/benchmarks/cpp_project_framework/: cpp_project_framework.benchmark.cpp
