[metadata]
name = cpp_project_framework
version = 1.0.0
author = Curtis Lo
description = C++ Project Framework is a framework for creating C++ project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sheepgrass/cpp_project_framework
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    create_new_cpp_project = cpp_project_framework.create_new_project:create_new_project

