[metadata]
name = cpp_project_framework
version = 1.0.0
author = Curtis Lo
description = C++ Project Framework is a framework for creating C++ project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sheepgrass/cpp_project_framework
license = GNU Affero General Public License v3
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = .

[options.data_files]
cpp_project_framework =
    .clang-format
    .gitignore
    CMakeSettings.json
    cpp_project_framework_callables.cmake
    cpp_project_framework.cmake
    Jenkinsfile
    LICENSE
    make.bat
    Makefile
cpp_project_framework/test_package =
    test_package/CMakeLists.txt
    test_package/conanfile.py
    test_package/example.cpp
cpp_project_framework/template =
    template/CMakeLists.txt
    template/conanfile.py
    template/conanfile.txt
    template/Doxyfile
    template/README.md
cpp_project_framework/template/template =
    template/template/CMakeLists.txt
    template/template/Template.cpp
    template/template/Template.h
    template/template/Template.hpp
    template/template/Template.test.cpp
    template/template/main.cpp
cpp_project_framework/template/tests/benchmarks/template =
    template/tests/benchmarks/template/Template.benchmark.cpp
cpp_project_framework/template/vscode =
    template/vscode/c_cpp_properties.json
    template/vscode/settings.json

[options.entry_points]
console_scripts =
    create_new_cpp_project = cpp_project_framework.create_new_project:create_new_project

